# penelope-co

./: README.md  pyproject.toml
ledger/: main.py
tests/: conftest.py  test_ledger.py
