[tool.poetry]
name = "penelope"
version = "0.1.0"
description = ""
authors = ["Andrey Sinitsyn <ollamh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipdb = "^0.13.13"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
